force-app/main/default/objects/smartystreets__Address_Object__mdt/smartystreets__Address_Object__mdt.object-meta.xml
<CustomObject>
    <description>Objects supporting Addresses in this Org</description>
    <label>√ Address Object</label>
    <pluralLabel>√ Address Objects</pluralLabel>
</CustomObject>