force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__Active__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED (Active)</label>
    <type>Checkbox</type>
</CustomField>