force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__Active_Job_ID_Field__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Active_Job_ID_Field__c</fullName>
    <label>DEPRECATED (Active Job ID Field)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>