force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__ActiveJobIDField__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__ActiveJobIDField__c</fullName>
    <label>Active Job ID Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>