force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__APIName__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__APIName__c</fullName>
    <label>API Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>