force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__Check_for_Existing_Addresses__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Check_for_Existing_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED (Check for Existing Addres.)</label>
    <type>Checkbox</type>
</CustomField>