force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__CheckforExistingAddresses__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__CheckforExistingAddresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check for Existing Addresses?</label>
    <type>Checkbox</type>
</CustomField>