force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__IsActive__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>