force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__IsSkipCompletionCheck__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__IsSkipCompletionCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Completion Check?</label>
    <type>Checkbox</type>
</CustomField>