force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__Large_Database__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Large_Database__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED (Large Database)</label>
    <type>Checkbox</type>
</CustomField>