force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__LargeDatabase__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__LargeDatabase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Large Database?</label>
    <type>Checkbox</type>
</CustomField>