force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__Run_Address_Trigger_Verification__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Run_Address_Trigger_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED (Run Address Trigger Veri.)</label>
    <type>Checkbox</type>
</CustomField>