force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__RunAddressTriggerVerification__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__RunAddressTriggerVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Address Trigger Verification?</label>
    <type>Checkbox</type>
</CustomField>