force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__RunEmailTriggerVerification__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__RunEmailTriggerVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Email Trigger Verification?</label>
    <type>Checkbox</type>
</CustomField>