force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__RunPhoneTriggerVerification__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__RunPhoneTriggerVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Phone Trigger Verification?</label>
    <type>Checkbox</type>
</CustomField>