force-app/main/default/objects/smartystreets__Address_Object__mdt/fields/smartystreets__SkipCompletionCheck__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__SkipCompletionCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED (Skip Completion Check)</label>
    <type>Checkbox</type>
</CustomField>