force-app/main/default/objects/smartystreets__Address_Object__mdt/listViews/smartystreets__AllObjects.listView-meta.xml
<ListView>
    <fullName>smartystreets__AllObjects</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>smartystreets__APIName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>